traversal.diagonal.traversaldiagonal.TraversalDiagonal.scala.error
Compilation error:
TraversalDiagonal:12: error: reassignment to val
      y=y-1;
       ^